Add basic window
add window struct
add function to show window

Signed-off-by: kimpors <mikita_korshak@ukr.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,9 @@ add_executable(${PROJECT_NAME} src/main.c)
 add_subdirectory(cmdio)
 target_link_libraries(${PROJECT_NAME} PUBLIC cmdio)
 target_include_directories(${PROJECT_NAME} PUBLIC include cmdio)
+
+if (WIN32)
+	add_library(${PROJECT_NAME} STATIC main.c)
+else()
+	add_library(${PROJECT_NAME} SHARED main.c)
+endif(WIN32)
